# FlipkartGRID2024

./: .gitignore  README.md  docker-compose.yml
OCR/: sliding.py  test.ipynb  test.py
client/: index.html  package-lock.json  package.json  tailwind.config.js
gradio_server/: Dockerfile  README.md  api.py  count_dino.py  count_owl-vith.py  freshness.py  freshness_mobile.py  metadata.json  ocr.py  requirements.txt  run.py  supervisord.conf  test.py
server/: Dockerfile  constants.py  example.env  main.py  output.json  pipeline.ipynb  pyproject.toml  setup.py  testing copy.ipynb  testing.ipynb
server/alembic/: env.py
server/alembic/versions/: 16f8c078838a_describe_your_changes.py  daf5fa3d2878_initial_migration.py
server/api/: ocr.py  pipeline.py  router.py
server/db/: database.py  models.py  postgres.py  qdrant.py  setup.py  startup.py
server/db/alembic/: env.py
server/db/alembic/versions/: 2b599ee01a19_description_of_the_changes.py  36f912ea0377_initializing_db.py  5d9af54a7294_initializing_db.py  8f371c646d24_initial_migration.py  a5c7aec974eb_initial_migration.py  d7369ea575dd_initializing_db.py  e6913f089edf_initializing_db.py  eab98d9323bb_initializing_db.py
server/gpt/: product_chain.py
server/images/: test.txt
server/models/: models.py
server/utils/: freshness_regression.py  fruit_inference.py  gpt.py  gradio_clients.py  image_functions.py  multiple_products.py  obj_detection.py  ocr.py  ocr_detection.py  text_functions.py  utils.py
server/utils/templates/: ocr_to_json.txt  shelf_life.txt
server/vector/: database.py  setup.py
(+15 files in other folders)
